# Fenrir-BR-CLI

./: ARCHITECTURE.md  Cargo.toml  FEATURES_IMPLEMENTED.md  IMPLEMENTATION_SUMMARY.md  README.md  TODO.json  proximospassos.todo  readme.md
src/: executor.rs  main.rs  oraculo.rs  tCommands.txt
src/ferramentas/: gobuster.rs  mod.rs  nmap.rs  reporter.rs  sqlmap.rs
