[package]
name = "fenrir"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }

# --- ADIÇÃO DA TIA ---
# Pra gente botar data e hora no log, que nem gente grande.
chrono = "0.4"